VeraSandBox2016/src/objects/Country_Map__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Country Interests</relationshipLabel>
        <relationshipName>Country_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Country Map</relationshipLabel>
        <relationshipName>Country_Map</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Country Restrictions</relationshipLabel>
        <relationshipName>Country_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Countries Implicated</relationshipLabel>
        <relationshipName>Countries_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Country Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COM-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Map</pluralLabel>
    <recordTypes>
        <fullName>Account_Interest</fullName>
        <active>true</active>
        <label>Account Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Restriction</fullName>
        <active>true</active>
        <label>Funding Restriction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mission_Focus</fullName>
        <active>true</active>
        <label>Mission Focus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mission_Location</fullName>
        <active>true</active>
        <label>Mission Location</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>